tests/parser/bug_74/invalid_5.m.out
In invalid_5.m, line 3
| x = [,,3]
|       ^ error: expected M_KET, found COMMA instead
MISS_HIT Debug Summary: 1 file(s) analysed, 1 error(s)
